--- a/SMIT- Web-and-app/Js/form-saylani/index.html
+++ b/SMIT- Web-and-app/Js/form-saylani/index.html
@@ -14,7 +14,7 @@
 
     <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Active</a>
+          <a class="nav-link active" aria-current="page" href="">Active</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -22,10 +22,11 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
+    </ul>
+
+    <div id = 'para'>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius facere doloremque maiores pariatur voluptate provident quam, iusto corporis ducimus nostrum ipsum <br> nobis deserunt officiis, quod nisi adipisci dolores dicta esse.</p>
+    </div>
 
 
 
